# four_horsemen

./: .gitignore  LICENSE.txt  README.md  new.txt  pyproject.toml  requirements.txt  subreddits.txt  test.sh  text.xml
FamilyGuyClips/: cmd.sh  makeClip.py  requirements.txt
FamilyGuyClips/content/CSPAN/: clips.txt  correspondents_dinner.txt  cspanmovies.txt  hearings.txt
bots/c-span/: c_span_chron_upload.py
bots/dhar_mann/: dhar_mann_chron_upload.py  dharmann.txt
four_horsemen/: CreateMeme.py  __about__.py  __init__.py  family_guy.py  make_clip.py  multi_meme.py  srt.py  utils.py
samples/: CandyFromBaby.txt  ChristmasPresents.txt  DadInHospital.txt  GenderReveal.txt  output.aiff
tests/: test_multi_meme.py
