[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "four_horsemen"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = [
  "ffmpeg",
  "algorithmic content",
  "family guy",
  "reddit"
]
authors = [
  { name = "William Kaiser", email = "wkaisertexas@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.scripts]
family_guy = "four_horsemen.family_guy:main"

[project.gui-scripts]
family_guy = "four_horsemen.family_guy:main"

[project.urls]
Documentation = "https://github.com/wkaisertexas/four-horsemen#readme"
Issues = "https://github.com/wkaisertexas/four-horsemen/issues"
Source = "https://github.com/wkaisertexas/four-horsemen"

[tool.hatch.version]
path = "four_horsemen/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=four_horsemen --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "four_horsemen/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
